Updated all language-files as far as possible to match Fehler 17 in http://collabtive.o-dyn.de/forum/viewtopic.php?f=12&t=2244&sid=8a74f63e3a5d40c6a86e6c90d53786dc

--- a/language/ar/lng.conf
+++ b/language/ar/lng.conf
@@ -130,6 +130,8 @@ messages = رسائل
 messagewasadded = تم اضافة الرسالة
 messagewasdeleted = تم حذف الرسالة
 messagewasedited = تم تعديل الرسالة
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = رسالاتي
 replies = ردود
 reply = رد
@@ -147,10 +149,11 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
+hello = مرحبا
 projectassignedsubject = ملحوظة من Collabtive – تم تكلفة المشروع
 projectassignedtext =
 taskassignedsubject = ملحوظة من Collabtive – تم تكلفة المهمة
-taskassignedtext = مرحبا,<br /><br />تم تكلفة مهمة جديدة لك :<br />
+taskassignedtext = تم تكلفة مهمة جديدة لك :
 addfile = اضف ملف
 addfiles = اضف ملفات
 addfolder = اضف مجلد
@@ -163,6 +166,8 @@ editfile = عدل ملف
 editfolder = عدل مجلد
 file = ملف
 files = ملفات
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = تم اضافة الملف
 filewasdeleted = تم حذف الملف
 filewasedited = تم تعديل الملف
