--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -130,6 +130,8 @@ messages = Съобщения
 messagewasadded = Съобщението е прибавено
 messagewasdeleted = Съобщението е изтрито
 messagewasedited = Съобщението е редактирано
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Моите съобщения
 replies = Отговори
 reply = Отговор
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
+hello = 
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -163,6 +166,8 @@ editfile = Редактирай файл
 editfolder = Редактирай папка
 file = Файл
 files = Файлове
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Файлът е прибавен
 filewasdeleted = Файлът е изтрит
 filewasedited = Файлът е редактиран
