--- a/language/ca/lng.conf
+++ b/language/ca/lng.conf
@@ -130,6 +130,8 @@ messages = Missatges
 messagewasadded = Missatge afegit
 messagewasdeleted = Missatge esborrat
 messagewasedited = Missatge editat
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Els meus missatges
 replies = Respotes
 reply = Resposta
@@ -147,10 +149,11 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Contrasenya
 profileusername = Nom d'usuari
+hello = Hola
 projectassignedsubject = Notificació de Collabtive – Projecte assignat
-projectassignedtext = Hola,<br /><br />Has estat assignat a aquest nou projecte:<br />
+projectassignedtext = Has estat assignat a aquest nou projecte:
 taskassignedsubject = Notificació de Collabtive – Tasca assignada
-taskassignedtext = Hola,<br /><br />Has estat assignat a una nova tasca:<br />
+taskassignedtext = Has estat assignat a una nova tasca:
 addfile = Afegeix un fitxer
 addfiles = Afegeix fitxers
 addfolder = Afegeix un directori
@@ -163,6 +166,8 @@ editfile = Edita el fitxer
 editfolder = Edita el directori
 file = Fitxer
 files = Fitxers
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Fitxer afegit
 filewasdeleted = Fitxer esborrat
 filewasedited = Fitxer editat
