--- a/language/cz/lng.conf
+++ b/language/cz/lng.conf
@@ -130,6 +130,8 @@ messages = Zprávy
 messagewasadded = Zpráva byla přidána
 messagewasdeleted = Zpráva byla smazána
 messagewasedited = Zpráva byla upravena
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Moje zprávy
 replies = Odpovědi
 reply = Odpovědět
@@ -144,13 +146,14 @@ mailserver = Server
 mailusername = SMTP uživatelské jméno
 mailpass = SMTP heslo
 profileaddedsubject = Collabtive oznamení – Nový uživatelský profil
-profileaddedtext = Ahoj,<br /><br />byl Vám vytvořen uživatelský profil.<br />
+profileaddedtext = byl Vám vytvořen uživatelský profil.
 profilepass = Heslo
 profileusername = Uživatelské jméno
+hello = Ahoj
 projectassignedsubject = Collabtive oznamení – Projekt přidělen
-projectassignedtext = Ahoj,<br /><br />byl Ti přidělen následující projekt:<br />
+projectassignedtext = byl Ti přidělen následující projekt:
 taskassignedsubject = Collabtive oznamení – Úkol přidělen
-taskassignedtext = Ahoj,<br /><br />byl Ti přidělen následující úkol:<br />
+taskassignedtext = byl Ti přidělen následující úkol: 
 addfile = Přidat soubor
 addfiles = Přidat soubory
 addfolder = Vytvořit složku
@@ -163,6 +166,8 @@ editfile = Upravit soubor
 editfolder = Upravit složku
 file = Soubor
 files = Soubory
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Soubor byl přidán
 filewasdeleted = Soubor byl smazán
 filewasedited = Soubor byl upraven
