--- a/language/da/lng.conf
+++ b/language/da/lng.conf
@@ -132,6 +132,8 @@ messages = Meddelelser
 messagewasadded = Meddelelsen blev tilføjet
 messagewasdeleted = Meddelelsen blev slettet
 messagewasedited = Meddelelsen blev rettet
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mine meddelelser
 replies = Besvarelser
 reply = Besvar
@@ -146,13 +148,14 @@ mailserver = Server
 mailusername = SMTP brugernavn
 mailpass = SMTP kodeord
 profileaddedsubject =
-profileaddedtext = Hej,<br /><br />en ny brugerprofil er blevet oprettet for dig.<br />
+profileaddedtext = en ny brugerprofil er blevet oprettet for dig.
 profilepass = Kodeord
 profileusername = Brugernavn
+hello = Hej
 projectassignedsubject =
-projectassignedtext = Hej,<br /><br />en ny projekt er blevet tildelt til dig:<br />
+projectassignedtext = en ny projekt er blevet tildelt til dig:
 taskassignedsubject =
-taskassignedtext = Hej,<br /><br />en ny opgave er blevet tildelt til dig:<br />
+taskassignedtext = en ny opgave er blevet tildelt til dig:
 addfile = Tilføj fil
 addfiles = Tilføj filer
 addfolder = Tilføj mappe
@@ -164,9 +167,9 @@ directory = Mappe
 editfile = Rediger fil
 editfolder = Rediger mappe
 file = Fil
+files = Filer
 filecreatedsubject = Collabtive info: fil tilføjet
 filecreatedtext = En fil er blevet tilføjet til dit projekt.
-files = Filer
 filewasadded = Filen blev tilføjet
 filewasdeleted = Filen blev slettet
 filewasedited = Filen blev rettet
