--- a/language/es/lng.conf
+++ b/language/es/lng.conf
@@ -130,6 +130,8 @@ messages = Mensajes
 messagewasadded = Mensaje añadido
 messagewasdeleted = Mensaje eliminado
 messagewasedited = Mensaje editado
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mis mensajes
 replies = Respuestas
 reply = Respuesta
@@ -147,6 +149,7 @@ profileaddedsubject = Notificación de Collabtive – Perfil de usuario añadido
 profileaddedtext =
 profilepass = Password
 profileusername = Nombre de usuario
+hello = 
 projectassignedsubject = Notificación de Collabtive – Proyecto asignado
 projectassignedtext =
 taskassignedsubject = Notificación de Collabtive – Tarea asignada
@@ -163,6 +166,8 @@ editfile = Editar archivo
 editfolder = Editar carpeta
 file = Archivo
 files = Archivos
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Archivo añadido
 filewasdeleted = Archivo eliminado
 filewasedited = Archivo editado
