--- a/language/es_gl/lng.conf
+++ b/language/es_gl/lng.conf
@@ -130,6 +130,8 @@ messages = Mensaxes
 messagewasadded = 
 messagewasdeleted = 
 messagewasedited = 
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = 
 replies = Respostas
 reply = Resposta
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
+hello = 
 projectassignedsubject = 
 projectassignedtext = 
 taskassignedsubject = 
@@ -163,6 +166,8 @@ editfile = Editar fichero
 editfolder = 
 file = Fichero
 files = Ficheros
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = 
 filewasdeleted = 
 filewasedited = 
