--- a/language/fi/lng.conf
+++ b/language/fi/lng.conf
@@ -130,6 +130,8 @@ messages = Viestit
 messagewasadded = Viesti lisätty
 messagewasdeleted = Viesti poistettu
 messagewasedited = Viestiä muokattu
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Omat viestini
 replies = Vastaukset
 reply = Vastaa
@@ -144,13 +146,14 @@ mailserver = Palvelin
 mailusername = SMTP käyttäjätunnus
 mailpass = SMTP salasana
 profileaddedsubject = Collabtive ilmoitus – Uusi käyttäjäprofiilisi
-profileaddedtext = Hei,<br /><br />sinulle on luotu uusi käyttäjäprofiili.<br />
+profileaddedtext = sinulle on luotu uusi käyttäjäprofiili.
 profilepass = Salasana
 profileusername = Käyttäjätunnus
+hello = Hei
 projectassignedsubject = Collabtiven ilmoitus – Projekti nimitetty
-projectassignedtext = Hei,<br /><br />sinut on nimetty uuteen projektiin:<br />
+projectassignedtext = sinut on nimetty uuteen projektiin:
 taskassignedsubject = Collabtiven ilmoitus – Tehtävä nimitetty
-taskassignedtext = Hei,<br /><br />sinulle on nimetty uusi tehtävä:<br />
+taskassignedtext = sinulle on nimetty uusi tehtävä:
 addfile = Lisää tiedosto
 addfiles = Lisää tiedostot
 addfolder = Lisää kansio
@@ -163,6 +166,8 @@ editfile = Muokkaa tiedostoa
 editfolder = Muokkaa kansiota
 file = Tiedosto
 files = Tiedostot
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Tiedosto lisätty
 filewasdeleted = Tiedosto poistettu
 filewasedited = Tiedostoa muokattu
