--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -130,6 +130,8 @@ messages = Messages
 messagewasadded = Message a été ajouté
 messagewasdeleted = Message a été supprimé
 messagewasedited = Message a été modifié
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mes messages
 replies = Réponses
 reply = Réponse
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Mot de passe
 profileusername = Nom d'utilisateur
+hello = 
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -163,6 +166,8 @@ editfile = Modifier le fichier
 editfolder = Editer le dossier
 file = Fichier
 files = Fichiers
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Fichier a été ajouté
 filewasdeleted = Fichier a été supprimé
 filewasedited = Fichier a été modifié
