--- a/language/gr/lng.conf
+++ b/language/gr/lng.conf
@@ -130,6 +130,8 @@ messages = Μηνύματα
 messagewasadded = Το μήνυμα προστέθηκε
 messagewasdeleted = Το μήνυμα διεγράφη
 messagewasedited = Το μήνυμα επεξεργάστηκε επιτυχώς
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Τα μηνύματά μου
 replies = Απαντήσεις
 reply = Απάντηση
@@ -147,10 +149,11 @@ profileaddedsubject =
 profileaddedtext =
 profilepass =
 profileusername =
+hello = Γεια χαρά
 projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε project
 projectassignedtext =
 taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε task
-taskassignedtext = Γεια χαρά,<br /><br />σας ανατέθηκε ένα νέο task :<br />
+taskassignedtext = σας ανατέθηκε ένα νέο task:
 addfile = Προσθήκη αρχείου 
 addfiles = Προσθήκη αρχείων
 addfolder = Νέος φάκελος
@@ -163,6 +166,8 @@ editfile = Επεξεργασία αρχείου
 editfolder = Επεξεργασία φακέλου
 file = Αρχείο
 files = Αρχεία
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Το αρχειο προστέθηκε
 filewasdeleted = Το αρχείο διεγράφη
 filewasedited = Το αρχείο επεξεργάστηκε επιτυχώς
