--- a/language/hu/lng.conf
+++ b/language/hu/lng.conf
@@ -130,6 +130,8 @@ messages = Üzenetek
 messagewasadded = Üzenet hozzáadva
 messagewasdeleted = Üzenet törölve
 messagewasedited = Üzenet szerkesztve
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Üzeneteim
 replies = Válaszok
 reply = Válasz
@@ -147,10 +149,11 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Profil jelszó
 profileusername = Profil felhasználó
+hello = Üdv
 projectassignedsubject = Collabtive emlékeztető – projekt kijelölve
-projectassignedtext = Üdv,<br /><br />egy új projekthez lettél kijelölve:<br />
+projectassignedtext = egy új projekthez lettél kijelölve:
 taskassignedsubject = Collabtive emlékeztető – feladat kijelölve
-taskassignedtext = Üdv,<br /><br />egy új feladathoz lettél kijelölve:<br />
+taskassignedtext = egy új feladathoz lettél kijelölve:
 addfile = File hozzáadása
 addfiles = Fileok hozzáadása
 addfolder = Mappa hozzáadása
@@ -163,6 +166,8 @@ editfile = File szerkesztése
 editfolder = Könyvtár szerkesztése
 file = File
 files = Fileok
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = File hozzáadva
 filewasdeleted = File törölve
 filewasedited = File szerkesztve
