--- a/language/it/lng.conf
+++ b/language/it/lng.conf
@@ -130,6 +130,8 @@ messages = Messaggi
 messagewasadded = Messaggio aggiunto
 messagewasdeleted = Messaggio eliminato
 messagewasedited = Messaggio modificato
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = I miei Messaggi
 replies = Risposte
 reply = Risposta
@@ -147,6 +149,7 @@ profileaddedsubject = Notifica da Collabtive – Profilo utente creato
 profileaddedtext =
 profilepass = Password
 profileusername = Username
+hello = 
 projectassignedsubject = Notifica da Collabtive – Progetto assegnato
 projectassignedtext =
 taskassignedsubject = Notifica da Collabtive – Task assegnata
@@ -163,6 +166,8 @@ editfile = Modifica file
 editfolder = Modifica cartella
 file = File
 files = File
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = File aggiunto
 filewasdeleted = File eliminato
 filewasedited = File modificato
