--- a/language/jp/lng.conf
+++ b/language/jp/lng.conf
@@ -130,6 +130,8 @@ messages = メッセージ
 messagewasadded = メッセージが追加されました
 messagewasdeleted = メッセージが消去されました
 messagewasedited = メッセージが編集されました
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = マイメッセージ
 replies = 返信
 reply = 返信
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
+hello = 
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -163,6 +166,8 @@ editfile = ファイル編集
 editfolder = フォルダー編集
 file = ファイル
 files = ファイル
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = ファイルが追加されました
 filewasdeleted = ファイルが消去されました
 filewasedited = ファイルが編集されました
