--- a/language/lt/lng.conf
+++ b/language/lt/lng.conf
@@ -130,6 +130,8 @@ messages = Žinutės
 messagewasadded = Žinutė pridėta
 messagewasdeleted = Žinutė oašalinta
 messagewasedited = Žinutė redaguota
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Namo žinutės
 replies = Atsakymai
 reply = Atsakyti
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext = 
 profilepass = 
 profileusername = 
+hello = 
 projectassignedsubject = 
 projectassignedtext = 
 taskassignedsubject = 
@@ -163,6 +166,8 @@ editfile = Redaguoti bylą
 editfolder = 
 file = Byla
 files = Bylos
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Byla pridėta
 filewasdeleted = Byla pašalinta
 filewasedited = Byla redaguota
