--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -132,6 +132,8 @@ messages = Notities
 messagewasadded = Notitie toegevoegd
 messagewasdeleted = Notitie verwijderd
 messagewasedited = Notitie aangepast
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mijn notities
 replies = Reacties
 reply = Reactie
@@ -146,13 +148,14 @@ mailserver = SMTP servernaam
 mailusername = SMTP gebruikersnaam
 mailpass = SMTP wachtwoord
 profileaddedsubject = Collabtive notificatie – Uw nieuwe gebruikersprofiel
-profileaddedtext = Hallo,<br /><br />een nieuw gebruikersprofiel is voor u aangemaakt.<br />
+profileaddedtext = een nieuw gebruikersprofiel is voor u aangemaakt.
 profilepass = Wachtwoord
 profileusername = Gebruikersnaam
+hello = Hallo
 projectassignedsubject = Collabtive notificatie – Project toegewezen aan onderwerp
-projectassignedtext = Hallo,<br /><br />een nieuw project is aan u toegewezen:<br />
+projectassignedtext = een nieuw project is aan u toegewezen:
 taskassignedsubject = Collabtive notificatie – Onderwerp toegewezen aan taak
-taskassignedtext = Hallo,<br /><br />een nieuwe taak is aan u toegewezen:<br />
+taskassignedtext = een nieuwe taak is aan u toegewezen:
 addfile = Bestand toevoegen
 addfiles = Bestanden toevoegen
 addfolder = Map toevoegen
@@ -164,9 +167,9 @@ directory = Map
 editfile = Bestand aanpassen
 editfolder = Map wijzigen
 file = Bestand
-filecreatedsubject = Collabtive notificatie – Bestand toegevoegd
-filecreatedtext = Hallo,<br /><br />een bestand is aan een van uw projecten toegevoegd.<br />
 files = Bestanden
+filecreatedsubject = Collabtive notificatie – Bestand toegevoegd
+filecreatedtext = een bestand is aan een van uw projecten toegevoegd.
 filewasadded = Bestand toegevoegd
 filewasdeleted = Bestand verwijderd
 filewasedited = Bestand aangepast
