--- a/language/no/lng.conf
+++ b/language/no/lng.conf
@@ -130,6 +130,8 @@ messages = Beskjeder
 messagewasadded = Beskjed ble sendt
 messagewasdeleted = Beskjed ble slettet
 messagewasedited = Beskjed ble redigert
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mine beskjeder
 replies = Svar
 reply = Svar
@@ -144,13 +146,14 @@ mailserver = Server
 mailusername = SMTP brukernavn
 mailpass = SMTP passord
 profileaddedsubject = Collabtive varsel – Din nye brukerprofil
-profileaddedtext = Hallo,<br /><br />en ny brukerprofil ble laget til deg.<br />
+profileaddedtext = en ny brukerprofil ble laget til deg.
 profilepass = Passord
 profileusername = Brukernavn
+hello = Hallo
 projectassignedsubject = Collabtive varsel – Prosjekt tildelt
-projectassignedtext = Hallo,<br /><br />et nytt prosjekt ble tildelt deg:<br />
+projectassignedtext = et nytt prosjekt ble tildelt deg:
 taskassignedsubject = Collabtive varsel – Oppgave tildelt
-taskassignedtext = Hallo,<br /><br />en ny oppgave ble tildelt deg:<br />
+taskassignedtext = en ny oppgave ble tildelt deg:
 addfile = Legg til fil
 addfiles = Legg til filer
 addfolder = Leg til mape
@@ -163,6 +166,8 @@ editfile = Rediger fil
 editfolder = Rediger mappe
 file = Fil
 files = Filer
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Filen ble lagt til
 filewasdeleted = Filen ble slettet
 filewasedited = Filen ble redigert
