--- a/language/pl/lng.conf
+++ b/language/pl/lng.conf
@@ -130,6 +130,8 @@ messages = Wiadomości
 messagewasadded = Wiadomość została dodana
 messagewasdeleted = Wiadomość została usunięta
 messagewasedited = Wiadomość została zmieniona
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Moje wiadomości
 replies = Odpowiedzi
 reply = Odpowiedź
@@ -144,13 +146,14 @@ mailserver = Serwer
 mailusername = Użytkownik SMTP
 mailpass = Hasło SMTP
 profileaddedsubject = Powiadomienie Collabtive – Nowy profil użytkownika
-profileaddedtext = Witaj ,<br /><br />nowy profil użytkownika został utworzony
+profileaddedtext = nowy profil użytkownika został utworzony
 profilepass = Hasło
 profileusername = Użytkownik
+hello = Witaj
 projectassignedsubject = Powiadomienie Collabtive – przydzielono ci projekt
-projectassignedtext = Witaj ,<br /><br />masz przydzielone nowe projekt:<br />
+projectassignedtext = masz przydzielone nowe projekt:
 taskassignedsubject = Powiadomienie Collabtive – przydzielono ci zadanie
-taskassignedtext = Witaj ,<br /><br />masz przydzielone nowe zadanie:<br />
+taskassignedtext = masz przydzielone nowe zadanie:
 addfile = Dodaj plik
 addfiles = Dodaj pliki
 addfolder = Dodaj folder
@@ -163,6 +166,8 @@ editfile = Zmień plik
 editfolder = Zmień katalog
 file = Plik
 files = Pliki
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Plik został dodany
 filewasdeleted = Plik został usunięty
 filewasedited = Plik został zmieniony
