--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -130,6 +130,8 @@ messages = Mensagens
 messagewasadded = Mensagem adicionada
 messagewasdeleted = Mensagem removida
 messagewasedited = Mensagem editada
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Minhas Mensagens
 replies = Respostas
 reply = Responder
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Password
 profileusername = Nome de Utilizador
+hello = 
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -163,6 +166,8 @@ editfile = Editar ficheiro
 editfolder = Editar pasta
 file = Ficheiro
 files = Ficheiros
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Ficheiro adicionado
 filewasdeleted = Ficheiro removido
 filewasedited = Ficheiro editado
