--- a/language/pt_br/lng.conf
+++ b/language/pt_br/lng.conf
@@ -130,6 +130,8 @@ messages = Mensagens
 messagewasadded = Mensagem adicionada
 messagewasdeleted = Mensagem removida
 messagewasedited = Mensagem alterada
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Minhas Mensagens
 replies = Respostas
 reply = Responder
@@ -147,6 +149,7 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Senha
 profileusername = Nome
+hello = 
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -163,6 +166,8 @@ editfile = Editar arquivo
 editfolder = Editar Pasta
 file = Arquivo
 files = Arquivos
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Arquivo adicionado
 filewasdeleted = Arquivo removido
 filewasedited = Arquivo alterado
