--- a/language/ro/lng.conf
+++ b/language/ro/lng.conf
@@ -148,6 +148,8 @@ messages = Mesaje
 messagewasadded = Mesaj adăugat 
 messagewasdeleted = Mesaj şters
 messagewasedited = Mesaj modificat
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mesajele mele
 replies = Răspunsuri
 reply = Răspuns
@@ -168,10 +170,11 @@ profileaddedsubject = Collabtive - Noul cont de utilizator
 profileaddedtext = Un nou cont de utilizator a fost creat pentru tine.
 profilepass = Parola
 profileusername = Nume de utilizator
+hello = Salut
 projectassignedsubject = Notificare Collabtive – Proiect alocat
-projectassignedtext = Salut,<br /><br />un nou proiect a fost alocat pentru tine:<br />
+projectassignedtext = un nou proiect a fost alocat pentru tine:
 taskassignedsubject = Notificare Collabtive – Task alocat
-taskassignedtext = Salut,<br /><br />un nou task a fost alocat pentru tine:<br />
+taskassignedtext = un nou task a fost alocat pentru tine:
 
 {* Files *}
 
@@ -186,9 +189,9 @@ directory = Dosar
 editfile = Modifică fişier
 editfolder = Modifică dosar
 file = Fişier
-filecreatedsubject = Notificare Collabtive: Fişier adăugat
-filecreatedtext = Salut,<br /><br />un fişier a fost adăugat la unul din proiectele tale.
 files = Fişiere
+filecreatedsubject = Notificare Collabtive: Fişier adăugat
+filecreatedtext = un fişier a fost adăugat la unul din proiectele tale.
 filewasadded = Fişier adăugat
 filewasdeleted = Fişier şters
 filewasedited = Fişier modificat
