--- a/language/rs/lng.conf
+++ b/language/rs/lng.conf
@@ -130,6 +130,8 @@ messages = Poruke
 messagewasadded = Poruka je kreirana
 messagewasdeleted = Poruka je  obrisana
 messagewasedited = Poruka je izmenjena
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Moje poruke
 replies = Odgovori
 reply = Odgovori
@@ -144,13 +146,14 @@ mailserver = Mail server
 mailusername = Mail korisničko ime
 mailpass = Mail sifra
 profileaddedsubject = Collabtive obaveštenje – Napravljen profil
-profileaddedtext = Zdravo,<br /><br />upravo Vam je napravljen profil.<br />
+profileaddedtext = upravo Vam je napravljen profil.
 profilepass = Lozinka profila
 profileusername = Korisničko ime profila
+hello = Zdravo
 projectassignedsubject = Collabtive obaveštenje – Dodeljen projekt
-projectassignedtext = Zdravo,<br /><br />upravo vam je dodeljen novi projekt:<br />
+projectassignedtext = upravo vam je dodeljen novi projekt:
 taskassignedsubject = Collabtive obaveštenje – Dodeljen zadataka
-taskassignedtext = Zdravo,<br /><br />upravo vam je dodeljen novi zadatak:<br />
+taskassignedtext = upravo vam je dodeljen novi zadatak:
 addfile = Dodaj fajl
 addfiles = Dodaj fajlove
 addfolder = Dodaj folder
@@ -163,6 +166,8 @@ editfile = Izmeni fajl
 editfolder = Izmni folder
 file = Fajl
 files = Fajlovi
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Fajl je dodat
 filewasdeleted = Fajl je obrisan
 filewasedited = Fajl je izmenjen
