--- a/language/ru/lng.conf
+++ b/language/ru/lng.conf
@@ -132,6 +132,8 @@ messages = Сообщения
 messagewasadded = Сообщение добавлено
 messagewasdeleted = Сообщение удалено
 messagewasedited = Сообщение отредактировано
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Мои сообщения
 replies = Ответы
 reply = Ответ
@@ -149,6 +151,7 @@ profileaddedsubject = Collabtive - Ваш новый профиль
 profileaddedtext = Ваш новый профиль создан
 profilepass = Пароль
 profileusername = Пользователь
+hello = 
 projectassignedsubject = Collabtive: Новый проект
 projectassignedtext = Вы назначены исполнителем проекта:
 taskassignedsubject = Collabtive: Новое задание
@@ -164,9 +167,9 @@ directory = Директория
 editfile = Редактировать файл
 editfolder = Редактировать папку
 file = Файл
+files = Файлы
 filecreatedsubject = Уведомление: файл успешно добавлен
 filecreatedtext = Файл был успешно добавлен в один из Ваших проектов.
-files = Файлы
 filewasadded = Файл добавлен
 filewasdeleted = Файл удален
 filewasedited = Файл изменен
