--- a/language/se/lng.conf
+++ b/language/se/lng.conf
@@ -130,6 +130,8 @@ messages = Meddelanden
 messagewasadded = Meddelande blev tillatg
 messagewasdeleted = Meddelande blev raderat
 messagewasedited = Meddelande blev redigerat
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mina meddelanden
 replies = Svar
 reply = Svar
@@ -144,13 +146,14 @@ mailserver = Server
 mailusername = SMTP-användarnamn
 mailpass = SMTP-lösenord
 profileaddedsubject = Collabtive notification – Din nya användarprofil
-profileaddedtext = Hej,<br /><br />en ny användarprofil ar skapats för dig.<br />
+profileaddedtext = en ny användarprofil ar skapats för dig.
 profilepass = Lösenord
 profileusername = Användarnamn
+hello = Hej
 projectassignedsubject = Collabtive notification – Projekt tilldelat
-projectassignedtext = Hej,<br /><br />du har blivit tilldelad ett nytt projekt:<br />
+projectassignedtext = du har blivit tilldelad ett nytt projekt:
 taskassignedsubject = Collabtive notification – Uppgift tilldelad
-taskassignedtext = Hej,<br /><br />du har blivit tilldelad en ny uppgift:<br />
+taskassignedtext = du har blivit tilldelad en ny uppgift:
 addfile = Lägg till fil
 addfiles = Lägg till filer
 addfolder = Lägg till mapp
@@ -163,6 +166,8 @@ editfile = Redigera fil
 editfolder = Redigera mapp
 file = Fil
 files = Filer
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Fil blev tillagd
 filewasdeleted = Fil blev raderad
 filewasedited = Fil blev redigerad
