--- a/language/sk/lng.conf
+++ b/language/sk/lng.conf
@@ -130,6 +130,8 @@ messages = Správy
 messagewasadded = Správa bola pridaná
 messagewasdeleted = Správa bola zmazaná
 messagewasedited = Správa bola upravená
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Moje správy
 replies = Odpovede
 reply = Odpovedať
@@ -144,13 +146,14 @@ mailserver = Server
 mailusername = SMTP užívateľ
 mailpass = SMTP heslo
 profileaddedsubject = Collabtive Oznámenie – Váš nový profil užívateľa
-profileaddedtext = Ahoj,<br /><br />bol vytvorený nový profil užívateľa.<br />
+profileaddedtext = bol vytvorený nový profil užívateľa.
 profilepass = Heslo
 profileusername = Užívateľské meno
+hello = Ahoj
 projectassignedsubject = Collabtive Oznámenie – Projekt pridelená
-projectassignedtext = Ahoj,<br /><br />bola Ti pridelená nasledujúca projekt:<br />
+projectassignedtext = bola Ti pridelená nasledujúca projekt:
 taskassignedsubject = Collabtive Oznámenie – Úloha pridelená
-taskassignedtext = Ahoj,<br /><br />bola Ti pridelená nasledujúca úloha:<br />
+taskassignedtext = bola Ti pridelená nasledujúca úloha:
 addfile = Pridať súbor
 addfiles = Pridať súbory
 addfolder = Vytvoriť zložku
@@ -163,6 +166,8 @@ editfile = Upraviť súbor
 editfolder = Upraviť zložku
 file = Súbor
 files = Súbory
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Súbor bol pridaný
 filewasdeleted = Súbor bol zmazaný
 filewasedited = Súbor bol upravený
