--- a/language/tr/lng.conf
+++ b/language/tr/lng.conf
@@ -130,6 +130,8 @@ messages = Mesajlar
 messagewasadded = Mesaj eklendi
 messagewasdeleted = Mesaj silindi
 messagewasedited = Mesaj düzenlendi
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Mesajlarım
 replies = Cevalpar
 reply = Cevapla
@@ -144,13 +146,14 @@ mailserver = Sunucu
 mailusername = SMTP kullanıcı adı
 mailpass = SMTP şifresi
 profileaddedsubject = Collabtive hatırlatması – Yeni kullanıcı profili
-profileaddedtext = Merhaba,<br /><br />sizin için yeni bir kullanıcı profili oluşuruldu.<br />
+profileaddedtext = sizin için yeni bir kullanıcı profili oluşuruldu. 
 profilepass = Parola
 profileusername = Kullanıcı Adı
+hello = Merhaba
 projectassignedsubject = Collabtive hatırlatması – Proje atandı
-projectassignedtext = Merhaba,<br /><br />bu yeni projede görevlendirildiniz:<br />
+projectassignedtext = bu yeni projede görevlendirildiniz:
 taskassignedsubject = Collabtive hatırlatması – Görev atandı
-taskassignedtext = Merhaba,<br /><br />bu yeni iş için siz görevlendirildiniz:<br />
+taskassignedtext = bu yeni iş için siz görevlendirildiniz:
 addfile = Dosya ekle
 addfiles = Dosyaları ekle
 addfolder = Klasör ekle
@@ -163,6 +166,8 @@ editfile = Dosyayı düzenle
 editfolder = Klasörü düzenle
 file = Dosya
 files = Dosyalar
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Dosya eklendi
 filewasdeleted = Dosya silindi
 filewasedited = Dosya düzenlendi
