--- a/language/ua/lng.conf
+++ b/language/ua/lng.conf
@@ -130,6 +130,8 @@ messages = Усі повідомлення
 messagewasadded = Повідомлення додано
 messagewasdeleted = Повідомлення видалено
 messagewasedited = Повідомлення відредаговано
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = Мої повідомлення
 replies = Відповіді
 reply = Відповісти
@@ -144,13 +146,14 @@ mailserver = Сервер
 mailusername = SMTP користувач
 mailpass = SMTP пароль
 profileaddedsubject = Collabtive Повідомлення – Ваш новий профіль користувача
-profileaddedtext = Привіт,<br /><br />Новий профіль користувача успішно створено.<br />
+profileaddedtext = Новий профіль користувача успішно створено.
 profilepass = Пароль
 profileusername = Логін
+hello = Привіт
 projectassignedsubject = Collabtive Повідомлення – Проект призначено
 projectassignedtext =
 taskassignedsubject = Collabtive Повідомлення – Завдання призначено
-taskassignedtext = Привіт,<br /><br />в системі створено нове завдання для тебе. Переглянь, будь ласка:<br />
+taskassignedtext = в системі створено нове завдання для тебе. Переглянь, будь ласка:
 addfile = Додати файл
 addfiles = Додати файли
 addfolder = Додати папку
@@ -163,6 +166,8 @@ editfile = Редагувати файл
 editfolder = Редагувати папку
 file = Файл
 files = Файли
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = Файли додано
 filewasdeleted = Файли видалено
 filewasedited = Файл відредаговано
