Updated all language-files as far as possible to match Fehler 17 in http://collabtive.o-dyn.de/forum/viewtopic.php?f=12&t=2244&sid=8a74f63e3a5d40c6a86e6c90d53786dc

--- a/language/cn/lng.conf
+++ b/language/cn/lng.conf
@@ -130,6 +130,8 @@ messages = 所有消息
 messagewasadded = 已添加消息
 messagewasdeleted = 已删除消息
 messagewasedited = 已编辑消息
+messagewasaddedsubject = 
+messagewasaddedtext = 
 mymessages = 我的所有消息
 replies = 所有回复
 reply = 回复
@@ -144,13 +146,14 @@ mailserver = 邮件服务器
 mailusername = SMTP用户名
 mailpass = SMTP密码
 profileaddedsubject = Collabtive提示 – 你的新用户档案
-profileaddedtext = 你好,<br /><br />已成功添加新的用户档案<br />
+profileaddedtext =已成功添加新的用户档案
 profilepass = 密码
 profileusername = 用户名
+hello = 你好
 projectassignedsubject = Collabtive提示 – 已成功布置项目
 projectassignedtext =
 taskassignedsubject = Collabtive提示 – 已成功布置任务
-taskassignedtext = 你好,<br /><br />系统给你分配了一个新的任务:<br />
+taskassignedtext = 系统给你分配了一个新的任务:
 addfile = 添加文件
 addfiles = 批量添加
 addfolder = 添加文件夹
@@ -163,6 +166,8 @@ editfile = 编辑文件
 editfolder = 编辑文件夹
 file = 文件
 files = 所有文件
+filecreatedsubject = 
+filecreatedtext = 
 filewasadded = 文件已添加
 filewasdeleted = 文件已删除
 filewasedited = 文件已成功编辑
