+ fixed a problem with long project names in standard and frost themes + made mb_string extension mandatory as required

--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -277,6 +277,8 @@ makedirwritable = Моля направете папката достъпна з
 makefilewritable = Моля направете файла достъпен за запис
 phpversion = Необходим ви е поне PHP 5.1
 proceedtologin = Продължете към страницата за вход
+mb_string_enabled = включено разширението mb_string
+enable_mb_string = моля разрешете разширението mb_string във вашия php.ini файл
 comment = Коментар
 edittimetracker = Редакция на запис за време
 endafterstart = Краят трябва да е след началото.
