--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -312,6 +312,8 @@ makedirwritable = Please make the directory writable.
 makefilewritable = Please make the file writable.
 phpversion = You need at least PHP version 5.1 to run Collabtive.
 proceedtologin = Proceed to the login page.
+mb_string_enabled = mb_string extension loaded
+enable_mb_string = Please enable mb_string extension
 
 {* Timetracker *}
 
