fixed wrong image path message replies

--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -324,7 +324,7 @@ close = Затвори
 closed = затворено
 day = Ден
 dayslate = Дни в закъснение
-daysleft = Дни остават
+daysleft = Дни
 deassigned = не е зададена
 deleted = изтрито
 desktop = Десктоп
