Italian translation now more complete, thanks to Marco Tomazzoni

--- a/language/it/lng.conf
+++ b/language/it/lng.conf
@@ -24,12 +24,13 @@ lastlogin = Ultimo Login
 locale = Lingua
 login = Login
 loginbutton = Login
-loginerror = Non hai effettuato l'accesso.<br />Controlla nome utente e password.
+loginerror = Accesso non riuscito.<br />Controlla nome utente e password.
 logout = Logout
 male = Maschio
 members = Persone
 myaccount = Il mio account
 newpass = Nuova password
+none = Nessuno
 oldpass = Vecchia password
 password = Password
 phone = Tel
@@ -54,6 +55,7 @@ zip = Cap
 access = Accesso
 addproject = Aggiungi progetto
 assignto = Assegna a
+budget = Budget
 closedprojects = Progetti chiusi
 deassign = Togli
 description = Descrizione
@@ -85,7 +87,7 @@ edittasklist = Modifica tasklist
 latetasks = Ultimi task
 mytasks = I miei task
 newtasks = Nuovi task
-notasklists =
+notasklists = Non sono state trovate Tasklist.
 notasks = Non ci sono task
 openprogress = Apri
 status = Stato
@@ -130,8 +132,6 @@ messages = Messaggi
 messagewasadded = Messaggio aggiunto
 messagewasdeleted = Messaggio eliminato
 messagewasedited = Messaggio modificato
-messagewasaddedsubject = 
-messagewasaddedtext = 
 mymessages = I miei Messaggi
 replies = Risposte
 reply = Risposta
@@ -139,21 +139,20 @@ replywasadded = Risposta aggiunta
 replywasdeleted = Risposta eliminata
 replywasedited = Risposta modificata
 title = Titolo
-mailfrommail = Da (mail):
-mailfromname = Da (nome):
+mailfrommail = Da (mail)
+mailfromname = Da (nome)
 mailmethod = Metodo
 mailserver = Server
 mailusername = SMTP Username
 mailpass = SMTP Password
-profileaddedsubject = Notifica da Collabtive – Profilo utente creato
-profileaddedtext =
+profileaddedsubject = Notifica da Collabtive - User profile
+profileaddedtext = Un nuovo profilo utente è stato creato per te.
 profilepass = Password
 profileusername = Username
-hello = 
-projectassignedsubject = Notifica da Collabtive – Progetto assegnato
-projectassignedtext =
-taskassignedsubject = Notifica da Collabtive – Task assegnata
-taskassignedtext =
+projectassignedsubject = Notifica da Collabtive - Progetto assegnato
+projectassignedtext = Un nuovo progetto è stato assegnato a te:
+taskassignedsubject = Notifica da Collabtive - Task assegnata
+taskassignedtext = Una nuova task è stata assegnata a te:
 addfile = Aggiungi file
 addfiles = Aggiungi files
 addfolder = Aggiungi cartella
@@ -165,9 +164,9 @@ directory = Directory
 editfile = Modifica file
 editfolder = Modifica cartella
 file = File
+filecreatedsubject = File aggiunto
+filecreatedtext = Salve, un file è stato aggiunto ad uno dei tuoi progetti
 files = File
-filecreatedsubject = 
-filecreatedtext = 
 filewasadded = File aggiunto
 filewasdeleted = File eliminato
 filewasedited = File modificato
@@ -177,7 +176,9 @@ folderwasdeleted = Cartella eliminata
 folderwasedited = Cartella modificata
 managefolders = Gestione cartelle
 maxsize = Dimensione massima
+parent = Cartella superiore
 rootdir = Directory principale
+visibility = Visibile per
 advancedsearch = Ricerca Avanzata
 didyoumean = Forse cercavi
 gosearch = Vai!
@@ -193,31 +194,32 @@ searchitem = Ricerca oggetto
 ar = Arabo
 bg = Bulgaro
 ca = Catalano
-zh = Cinese
-cs = Ceco
+cn = Cinese
+cz = Ceco
 da = Danese
 de = Tedesco
 en = Inglese
 es = Spagnolo
-gl = Galiziano
+es_gl = Galiziano
 fi = Finlandese
 fr = Francese
+gr = Greco
 hu = Ungherese
 it = Italiano
-ja = Giapponese
+jp = Giapponese
 lt = Lituano
 nl = Olandese
-nn =
+no = Norvegese
 pl = Polacco
 pt = Portoghese
 pt_br = Portoghese (Brasile)
 ro = Rumeno
-sr = Serbo
+rs = Serbo
 ru = Russo
 se = Svedese
 sk = Slovacco
 tr = Turco
-uk = Ucraino
+ua = Ucraino
 calendar = Calendario
 dateformat = Formato
 timezone = Fuso orario
@@ -237,7 +239,7 @@ april = Aprile
 may = Maggio
 june = Giugno
 july = Luglio
-august = Augosto
+august = Agosto
 september = Settembre
 october = Ottobre
 november = Novembre
@@ -246,7 +248,7 @@ accessdenied = Accesso negato
 confirmdel = Vuoi davvero cancellare questo oggetto?\nNon sarà possibile tornare indietro.
 error = Errore
 goback = Torna indietro e correggi l'errore.
-nopermission = Permisso negato
+nopermission = Permesso negato
 notyourproject = Non fai parte di questo progetto.
 wrongfield = Inserisci un valore corretto per \"%FIELDNAME%\"
 wrongfields = Inserisci un valore corretto per:\n\n
@@ -299,7 +301,7 @@ permissionswereedited = Permessi sono stati modificati
 role = Ruolo
 roleadded = Ruolo aggiunto.
 roleedited = Ruolo editato
-roles = Ruolos
+roles = Ruoli
 active = Attivo
 activity = Attività
 action = Azione
@@ -325,12 +327,13 @@ edited = modificato
 excelexport = Excel
 export = Esporta
 favicon = Favicon
+general = Generale
 help = Aiuto
 icalexport = iCal
 import = Importa
 importsuccess = Importazione riuscita
 inactive = Inattivo
-no = No
+notify = Notifica
 objoff = Inattivo
 objon = Attivo
 on = Creato
@@ -354,7 +357,7 @@ systemadministration = Amministrazione del Sistema
 systemdefault = Default
 systemsounds = Suoni
 tags = Tag
-was = era
-were = erano
+was = 
+were = 
 yes = Si
 zipexport = ZIP
