--- a/language/gr/lng.conf
+++ b/language/gr/lng.conf
@@ -4,8 +4,8 @@ admin = Admin
 all = Όλoυς
 avatar = Εικόνα
 cellphone = Κινητό
-changepassword = Αλλαγή password
-chatwith = Chat με
+changepassword = Αλλαγή κωδικού πρόσβασης
+chatwith = Συνομιλία με
 city = Πόλη
 client = Πελάτης
 company = Εταιρεία
@@ -13,7 +13,7 @@ confirmlogout = Αποσύνδεση;
 contact = Επαφή
 country = Χώρα
 deassignuser = Αποσύνδεση του χρήστη
-deleteform = Επανάθεση των tasks του χρήστη αυτού;
+deleteform = Επανάθεση των εργασιών του χρήστη αυτού;
 deleteuser = Διαγραφή χρήστη
 edituser = Επεξεργασία χρήστη
 email = E-Mail
@@ -29,12 +29,12 @@ logout = Έξοδος
 male = Άνδρας
 members = Άτομα
 myaccount = Ο λογαριασμός μου
-newpass = Νέο password
-oldpass = Παλιό password
-password = Password
+newpass = Νέος κωδικός πρόσβασης
+oldpass = Παλιός κωδικός πρόσβασης
+password = κωδικός πρόσβασης
 phone = Τηλέφωνο
 rate = Ωρομίσθιο
-repeatpass = Επανάληψη password
+repeatpass = Επανάληψη κωδικού πρόσβασης
 state = Πολιτεία
 stayloggedin =  αυτόματη σύνδεση
 template = Template
@@ -44,84 +44,84 @@ useradministration = Διαχείριση χρηστών
 userprofile = Προφίλ χρήστη
 usersonline = Χρήστες online 
 userwasadded = Ο χρήστης προστέθηκε
-userwasassigned = User was assigned
-userwasdeassigned = User was deassigned
+userwasassigned = Ο χρήστης ανατέθηκε
+userwasdeassigned = Ο χρήστης έχει απο-ανατεθεί
 userwasdeleted = Ο χρήστης διεγράφη.
 userwasedited = Τα στοιχεία του χρήστη επεξεργάστηκαν επιτυχώς
 vcardexport = Εξαγωγή V-card 
 welcomeback = Καλωσήρθατε
 zip = Τ.Κ.
-access = Access
-addproject = Νέο project
+access = Πρόσβαση
+addproject = Προσθήκη έργου
 assignto = Ανάθεση σε
-closedprojects = Κλειστά projects
-deassign = Deassign
+closedprojects = Κλειστά έργα
+deassign = Απο-ανάθεση
 description = Περιγραφή
-editproject = Επεξεργασία project
-myprojects = Τα project μου
+editproject = Επεξεργασία έργου
+myprojects = Τα έργα μου
 name = Όνομα
-noprojects = Δε βρέθηκαν projects.
-openprojects = Ανοιχτά projects
-project = Project
-projects = Projects
-projectadministration = Διαχείριση project
-projectname = Όνομα project
-projectwasadded = To project προστέθηκε
-projectwasclosed = Το project έκλεισε
-projectwasdeleted = Το project διεγράφη
-projectwasedited = Το project επεξεργάστηκε επιτυχώς
-projectwasopened = Το project άνοιξε
-report = Report
-start = Start
-addtask = Προσθήκη task
-addtasklist = Προσθήκη tasklist
+noprojects = Δε βρέθηκαν έργα.
+openprojects = Ανοιχτά έργα
+project = Έργο
+projects = Έργα
+projectadministration = Διαχείριση έργου
+projectname = Ονομασία έργου
+projectwasadded = To έργο προστέθηκε
+projectwasclosed = Το έργο περατώθηκε
+projectwasdeleted = Το έργο διεγράφη
+projectwasedited = Το έργο επεξεργάστηκε επιτυχώς
+projectwasopened = Το έργο άνοιξε
+report = Αναφορά
+start = Έναρξη
+addtask = Προσθήκη εργασίας
+addtasklist = Προσθήκη λίστας εργασιών
 assign = Ανάθεση
-deletetasks = Διαγραφή tasks
-done = ΟΚ
-donetasklists = Τελειωμένα tasklists
-donetasks = Τελειωμένα tasks
-edittask = Επεξεργασία task
-edittasklist = Επεξεργασία tasklist
-latetasks = Καθυστερημένα tasks
-mytasks = Τα tasks μου
-newtasks = Νέα tasks
-notasklists = Δε βρέθηκε tasklist.<br />δημιουργήστε μία.
-notasks = Δεν εκρεμμούν tasks 
+deletetasks = Διαγραφή εργασιών
+done = Πρόοδος
+donetasklists = Ολοκληρωμένες λίστες εργασιών
+donetasks = Ολοκληρωμένες εργασίες
+edittask = Επεξεργασία εργασίας
+edittasklist = Επεξεργασία λίστας εργασιών
+latetasks = Καθυστερημένες εργασίες
+mytasks = Οι εργασίες μου
+newtasks = Νέες εργασίες
+notasklists = Δε βρέθηκε λίστα εργασιών.<br />δημιουργήστε μία.
+notasks = Δεν εκρεμμούν εργασίες 
 openprogress = Ανοικτό
 status = Κατάσταση
-task = Task
-tasklist = Tasklist
-tasklists = Tasklists
-tasklistwasadded = Η tasklist προστέθηκε
-tasklistwasclosed = H tasklist έκλεισε
-tasklistwasdeleted = H tasklist διεγράφη
-tasklistwasedited = H tasklist επεξεργάστηκε επιτυχώς
-tasklistwasopened = H tasklist άνοιξε
-tasks = Tasks
-taskwasadded = Το task προστέθηκε
-taskwasassigned = Το task ανατέθηκε
-taskwasclosed = Το task έκλεισε
-taskwasdeassigned = Task was deassigned
-taskwasdeleted = Το task διεγράφη
-taskwasedited = Το task επεξεργάστηκε επιτυχώς
-taskwasopened = Το task άνοιξε
+task = Εργασία
+tasklist = Λίστα εργασιών
+tasklists = Λίστες εργασιών
+tasklistwasadded = Η λίστα εργασίας προστέθηκε
+tasklistwasclosed = H λίστα εργασίας έκλεισε
+tasklistwasdeleted = H λίστα εργασίας διεγράφη
+tasklistwasedited = H λίστα εργασίας επεξεργάστηκε επιτυχώς
+tasklistwasopened = H λίστα εργασίας άνοιξε
+tasks = Εργασίες
+taskwasadded = Η εργασία προστέθηκε
+taskwasassigned = Η εργασία ανατέθηκε
+taskwasclosed = Η εργασία έκλεισε
+taskwasdeassigned = Η εργασία απο-ανατέθηκε
+taskwasdeleted = Η εργασία διεγράφη
+taskwasedited = Η εργασία επεξεργάστηκε επιτυχώς
+taskwasopened = Η εργασία άνοιξε
 text = Κείμενο
-todaytasks = Tasks για σήμερα
-addmilestone = Προσθήκη milestone
-donemilestones = Done milestones
+todaytasks = Εργασίες για σήμερα
+addmilestone = Προσθήκη οροσήμου
+donemilestones = Ορόσημα που ολοκληρώθηκαν
 due = Λήξη
-editmilestone = Επεξεργασία milestone
+editmilestone = Επεξεργασία ορόσημου
 end = Τέλος
-latestones = Καθυστερημένα milestones
-milestone = Milestone
-milestones = Milestones
-milestonewasadded = Το milestone προστέθηκε
-milestonewasclosed = Το milestone έκλεισε
-milestonewasdeleted = Το milestone διεγράφη
-milestonewasedited = Το milestone επεξεργάστηκε επιτυχώς
-milestonewasopened = Το milestone was άνοιξε
-newmilestones = Νέα milestones
-todaystones = Σημερινά milestones
+latestones = Καθυστερημένα ορόσημα
+milestone = Ορόσημο
+milestones = Ορόσημα
+milestonewasadded = Το ορόσημο προστέθηκε
+milestonewasclosed = Το ορόσημο έκλεισε
+milestonewasdeleted = Το ορόσημο διεγράφη
+milestonewasedited = Το ορόσημο επεξεργάστηκε επιτυχώς
+milestonewasopened = Το ορόσημο άνοιξε
+newmilestones = Νέα ορόσημα
+todaystones = Σημερινά ορόσημα
 addmessage = Νέο μήνυμα
 answer = Απάντηση
 editmessage = Επεξεργασία μηνύματος
@@ -141,34 +141,34 @@ replywasedited = Η απάντηση επεξεργάστηκε επιτυχώς
 title = Τίτλος
 mailfrommail = Ε-mail αποστολέα
 mailfromname = Όνομα αποστολέα
-mailmethod = Method
-mailserver = Server
+mailmethod = Μέθοδος
+mailserver = Mail Server
 mailusername = SMTP username
 mailpass = SMTP password
-profileaddedsubject =
-profileaddedtext =
-profilepass =
-profileusername =
+profileaddedsubject = Collabtive - Νέο προφίλ χρήστη
+profileaddedtext = Ένα νέο προφίλ χρήστη έχει δημιουργηθεί για εσάς.
+profilepass = Κωδικός πρόσβασης
+profileusername = Όνομα Χρήστη
 hello = Γεια χαρά
-projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε project
+projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε έργο
 projectassignedtext =
-taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε task
-taskassignedtext = σας ανατέθηκε ένα νέο task:
+taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε εργασία
+taskassignedtext = σας ανατέθηκε μια νέα εργασία:
 addfile = Προσθήκη αρχείου 
 addfiles = Προσθήκη αρχείων
 addfolder = Νέος φάκελος
 attachfile = Επισύναψη αρχείου
 attachfiles = Επισύναψη αρχείων
-count = αριθμός
-directories = Φάκελοι
-directory = Φάκλεος
+count = Αρίθμηση
+directories = Κατάλογοι
+directory = Κατάλογος
 editfile = Επεξεργασία αρχείου
 editfolder = Επεξεργασία φακέλου
 file = Αρχείο
 files = Αρχεία
-filecreatedsubject = 
-filecreatedtext = 
-filewasadded = Το αρχειο προστέθηκε
+filecreatedsubject = Collabtive κοινοποίησης: Το αρχείο προστέθηκε
+filecreatedtext = Γεια σας, <br /> ένα αρχείο έχει προστεθεί σε ένα από τα έργα σας.
+filewasadded = Το αρχείο προστέθηκε
 filewasdeleted = Το αρχείο διεγράφη
 filewasedited = Το αρχείο επεξεργάστηκε επιτυχώς
 folder = Φάκελος
@@ -177,19 +177,19 @@ folderwasdeleted = Ο φάκελος διεγράφη
 folderwasedited = Ο φάκλεος επεξεργάστηκε επιτυχώς
 managefolders = Διαχείριση φακέλων
 maxsize = Μέγιστο μέγεθος
-rootdir = Root directory
+rootdir = Γονικός φάκελος
 advancedsearch = Σύνθετη αναζήτηση
 didyoumean = Μήπως εννοούσατε
-gosearch = Go!
+gosearch = Πάμε!
 newsearch = Νέα αναζήτηση
 noresults = Δε βρέθηκαν αποτελέσματα που να ταιριάζουν στην αναζήτησή σας.
-refinesearch = Refine search
+refinesearch = Εκλεπτισμένη αναζήτηση
 results = Αποτελέσματα
 resultsfor = Αποτελέσματα για
 search = Αναζήτηση
 searchfor = Αναζήτηση για
 searching = αναζήτηση...
-searchitem = Search item
+searchitem = Αναζήτηση στοιχείου
 ar =
 bg = Βουλγάρικα
 ca =
@@ -243,11 +243,11 @@ september = Σεπτέμβριος
 october = Οκτώβριος
 november = Νοέμβριος
 december = Δεκέμβριος
-accessdenied = Access denied
+accessdenied = Δεν επιτρέπεται η πρόσβαση
 confirmdel = Είσαι σίγουρος για τη διαγραφή;\nΗ διαγραφή δε μπορεί να αναιρεθεί.
 error = Σφάλμα
 goback = παρακαλώ επιστρέψτε και διορθώστε.
-nopermission = Permission denied
+nopermission = Απαγόρεψη πρόσβασης
 notyourproject = Δε σας έχει ανατεθεί αυτό το project.
 wrongfield = Παρακαλώ εισάγετε μια έγκυρη τιμή για \"%FIELDNAME%\".
 wrongfields = Παρακαλώ εισάγετε έγκυρες τιμές για:\n\n
@@ -281,26 +281,26 @@ filter = Φίλτρο
 filterreport = Φίλτρο
 hours = Ώρες
 inserttime = Τρέχουσα ώρα
-noassociatedtask = Δεν υπάρχει σχετικό task
+noassociatedtask = Δεν υπάρχει σχετική εργασία
 reporting = Reporting
 started = Ξεκίνησε
 totalhours = Συνολικές ώρες
 timetable = Timetable για
 timetracker = Timetracker
 timetrackeradded = Η ώρα προστέθηκε
-add =
-addrole =
-delete =
-delrole =
-edit =
-editrole =
-permissionread =
-permissions =
-permissionswereedited =
-role = Θέση
-roleadded =
-roleedited =
-roles =
+add = Προσθήκη
+addrole = Προσθήκη ρόλου
+delete = Διαγραφή
+delrole = Διαγραφή ρόλου
+edit = Επεξεργασία
+editrole = Επεξεργασία ρόλου
+permissionread = Ανάγνωση
+permissions = Άδειες
+permissionswereedited = Άδειες επιμελήθηκαν
+role = Ρόλος
+roleadded = Ο Ρόλος προστέθηκε
+roleedited = Ο ρόλος διορθώθηκε
+roles = Ρόλοι
 active = Active
 activity = Κίνηση
 action = Ενέργεια
@@ -312,16 +312,16 @@ assigned = ανατέθηκε
 attachbutton = Attach
 by = από
 cancel = Άκυρο
-chat =
+chat = Συνομιλία
 chooseone = Επιλέξτε
 close = Κλείσιμο
 closed = κλειστό
 day = Μέρα
 dayslate = Μέρες καθυστέρησης
 daysleft = Μέρες που απομένουν
-deassigned = deassigned
+deassigned = όχι ανατεθημένο
 deleted = διεγράφη
-desktop = Desktop
+desktop = Γενική επισκόπηση
 edited = επεξεργάστηκε
 excelexport = Excel
 export = Εξαγωγή
@@ -343,8 +343,8 @@ pdfexport = Εξαγωγή PDF
 private = Ιδιωτικό
 public = Δημόσιο
 rssfeed = RSS ροή
-rsspass =
-rssuser =
+rsspass = RSS κωδικό πρόσβασης
+rssuser = RSS username
 send = ΟΚ
 settings = Ρυθμίσεις
 settingschanged = Οι ρυθμίσεις άλλαξαν.
@@ -354,8 +354,8 @@ subtitle = Υπότιτλος
 systemadministration = Ρυθμίσεις
 systemdefault = Default
 systemsounds = Ήχοι
-tags = Tags
-was =
-were =
+tags = Ετικέτες Tags
+was = >
+were = >
 yes = Ναι
 zipexport = Εξαγωγή ZIP
